--- a/product.html
+++ b/product.html
@@ -42,7 +42,8 @@ button { cursor: pointer; }
 /* Product Image */
 .product-image-wrapper {
   position: relative;
-  width: 100%;
+  width: 80%; /* reduced size by 20% */
+  margin: 0 auto;
 }
 .product-image-wrapper img {
   width: 100%;
@@ -67,9 +68,12 @@ button { cursor: pointer; }
 /* Product Info */
 .product-info {
   padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .product-price {
-  font-size: 22px;
+  font-size: 28px; /* increased 30% */
   font-weight: bold;
   margin: 10px 0;
   color: #111;
@@ -77,18 +81,19 @@ button { cursor: pointer; }
 .product-title {
   font-size: 20px;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 /* Buttons */
 .product-info button {
-  width: 100%;
+  width: 90%;
   background: #f1641e;
   color: #fff;
   border: none;
-  padding: 12px;
-  border-radius: 6px;
-  font-size: 16px;
-  margin-bottom: 10px;
+  padding: 16px;
+  border-radius: 12px;
+  font-size: 18px;
+  margin-bottom: 12px;
   transition: 0.3s;
 }
 .product-info button:hover {
@@ -97,27 +102,27 @@ button { cursor: pointer; }
 
 /* Checkout select */
 .checkout-wrapper select {
-  width: 100%;
-  padding: 10px;
-  border-radius: 6px;
+  width: 90%;
+  padding: 14px;
+  border-radius: 12px;
   border: 1px solid #ccc;
-  margin-bottom: 10px;
-  font-size: 14px;
+  margin-bottom: 12px;
+  font-size: 16px;
 }
 .checkout-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
   background: #f1641e;
   color: #fff;
-  padding: 12px;
-  border-radius: 6px;
+  padding: 16px;
+  border-radius: 12px;
   border: none;
-  width: 100%;
-  font-size: 16px;
+  width: 90%;
+  font-size: 18px;
 }
-.checkout-btn img { width: 22px; height: 22px; }
+.checkout-btn img { width: 24px; height: 24px; }
 .checkout-btn:hover { background: #d9550e; }
 
 /* Product Description */
@@ -128,7 +133,6 @@ button { cursor: pointer; }
 }
 .details h2 { font-size: 18px; margin-bottom: 8px; }
 .details p { font-size: 14px; line-height: 1.6; color: #555; }
-
 </style>
 </head>
 <body>
