--- a/product.html
+++ b/product.html
@@ -1,213 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Product Details</title>
-  <style>
-    /* 🌐 Global Styles */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f6f6f6;
-      color: #333;
-      padding-top: 60px; /* space for fixed header */
-    }
+<meta charset="UTF-8">
+<title>Product Details</title>
+<style>
+  /* 🌐 Global Styles */
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background: #f6f6f6;
+    color: #333;
+    padding-top: 60px; /* space for fixed header */
+  }
 
-    /* 🌐 Header */
-    .header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 1000;
-      background: #fff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 10px 16px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 10px;
-    }
+  /* Header */
+  .header {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%;
+    z-index: 1000;
+    background: #fff;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    padding: 8px 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .logo { font-weight: bold; font-size: 20px; text-decoration: none; color: #111; }
+  .search-bar { flex: 1; max-width: 70%; padding: 8px 12px; border-radius: 6px; border: 1px solid #ccc; font-size: 14px; } /* shortened by 30% */
+  .cart, .liked-icon { width: 32px; height: 32px; }
+  .cart img, .liked-icon img { width: 100%; height: 100%; }
 
-    .logo {
-      font-size: 20px;
-      font-weight: bold;
-      text-decoration: none;
-      color: #111;
-      flex-shrink: 0;
-    }
+  /* Product Section */
+  .product-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px auto;
+    max-width: 600px;
+    width: 100%;
+    padding: 0 10px;
+  }
 
-    .search-bar {
-      flex: 1;
-      max-width: 70%; /* 30% shorter */
-      padding: 8px 12px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 14px;
-      height: 34px;
-    }
+  .product-image-wrapper {
+    width: 100%;
+    position: relative;
+  }
+  #product-image {
+    width: 100%;
+    border-radius: 10px;
+    max-width: 100%;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    margin-bottom: 15px;
+  }
+  .heart.always {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 36px; height: 36px;
+    background: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  }
 
-    .header-right {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
+  /* Price & Title */
+  #product-price {
+    font-size: 36px; /* 50% bigger */
+    font-weight: bold;
+    color: #111;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  #product-name {
+    font-size: 22px;
+    font-weight: normal;
+    margin-bottom: 20px;
+    text-align: left;
+    width: 100%;
+  }
 
-    .liked-icon img,
-    .cart img {
-      width: 28px;
-      height: 28px;
-      display: block;
-    }
+  /* Buttons */
+  .btn {
+    width: 100%;
+    padding: 16px;
+    margin-bottom: 12px;
+    font-size: 18px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: 0.3s;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  }
+  .add-to-cart {
+    background: #f1641e;
+    color: #fff;
+  }
+  .add-to-cart:hover { background: #d9550e; }
+  .checkout-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background: #ff8c42;
+    color: #fff;
+  }
+  .checkout-btn:hover { background: #e57a25; }
+  .checkout-btn img { width: 24px; height: 24px; }
 
-    @media (max-width: 480px) {
-      .search-bar { max-width: 80%; }
-    }
+  /* Checkout Wrapper */
+  .checkout-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  select#payment-method {
+    padding: 14px;
+    border-radius: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    appearance: none;
+  }
 
-    /* 🌐 Product Content */
-    .product-container {
-      margin-top: 60px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 0 10px;
-    }
+  /* Description */
+  .details {
+    max-width: 600px;
+    margin: 20px auto 60px;
+    padding: 20px;
+    background: #fff;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+  }
+  .details h2 { font-size: 22px; margin-bottom: 10px; }
+  .details p { font-size: 16px; line-height: 1.6; color: #555; }
 
-    .product-image {
-      width: 100%;
-      max-width: 500px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      margin-bottom: 15px;
-    }
-
-    .product-price {
-      font-size: 36px; /* 50% bigger */
-      font-weight: bold;
-      color: #111;
-      align-self: flex-start;
-      margin-bottom: 10px;
-    }
-
-    .product-name {
-      font-size: 24px;
-      margin-bottom: 15px;
-      text-align: left;
-      width: 100%;
-    }
-
-    .btn {
-      font-size: 18px;
-      padding: 16px 24px;
-      border-radius: 25px; /* bubble style */
-      cursor: pointer;
-      border: none;
-      margin-bottom: 10px;
-      width: 100%;
-      max-width: 300px;
-      transition: 0.3s;
-    }
-
-    .add-to-cart {
-      background: #f1641e;
-      color: white;
-    }
-
-    .add-to-cart:hover {
-      background: #d9550e;
-    }
-
-    .buy-now {
-      background: #ff6b6b;
-      color: white;
-    }
-
-    .buy-now:hover {
-      background: #ff4c4c;
-    }
-
-    .details {
-      max-width: 500px;
-      background: #fff;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px auto 60px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-
-    .details h2 {
-      font-size: 22px;
-      margin-bottom: 10px;
-    }
-
-    .details p {
-      font-size: 16px;
-      line-height: 1.6;
-      color: #555;
-    }
-  </style>
+  @media (max-width: 480px) {
+    #product-price { font-size: 32px; }
+    #product-name { font-size: 20px; }
+    .btn { font-size: 16px; padding: 14px; border-radius: 25px; }
+  }
+</style>
 </head>
 <body>
 
-  <!-- Header -->
-  <header class="header">
-    <a href="index.html" class="logo">DjsDopeDesigns</a>
-    <input type="text" class="search-bar" placeholder="Search products...">
-    <div class="header-right">
-      <div class="liked-icon"><img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items"></div>
-      <div class="cart"><img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart"></div>
-    </div>
-  </header>
+<!-- Header -->
+<header class="header">
+  <a href="index.html" class="logo">DjsDopeDesigns</a>
+  <input type="text" class="search-bar" placeholder="Search products...">
+  <div class="liked-icon"><img src="https://www.svgrepo.com/show/456524/heart-chat.svg" alt="Liked items"></div>
+  <div class="cart"><img src="https://www.svgrepo.com/show/507858/shopping-cart.svg" alt="Cart"></div>
+</header>
 
-  <!-- Product Content -->
-  <div class="product-container">
-    <img id="product-image" class="product-image" src="" alt="Product Image">
-    <div class="product-price" id="product-price"></div>
-    <div class="product-name" id="product-name"></div>
-
-    <button class="btn add-to-cart" onclick="addToCart()">Add to Cart</button>
-    <button class="btn buy-now" onclick="checkoutProduct()">Buy Now</button>
+<!-- Product -->
+<div class="product-container">
+  <div class="product-image-wrapper">
+    <img id="product-image" src="" alt="Product Image">
+    <div class="heart always" onclick="toggleLike(currentProduct.id, this)">♡</div>
   </div>
+  <p id="product-price"></p>
+  <h1 id="product-name"></h1>
 
-  <!-- Product Description -->
-  <div class="details">
-    <h2>Product Description</h2>
-    <p id="product-description"></p>
+  <button class="btn add-to-cart" onclick="addToCart()">Add to Cart</button>
+
+  <div class="checkout-wrapper">
+    <select id="payment-method">
+      <option value="">-- Select Payment --</option>
+      <option value="stripe-card">Credit / Debit Card</option>
+      <option value="paypal">PayPal</option>
+      <option value="stripe-wallet">Google Pay / Apple Pay</option>
+    </select>
+    <button class="btn checkout-btn" onclick="checkoutProduct()">
+      <img id="checkout-icon" src="https://cdn-icons-png.flaticon.com/512/888/888879.png" alt="Pay Icon"> Buy Now
+    </button>
   </div>
+</div>
 
-  <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const productId = urlParams.get("id");
-    let currentProduct = null;
+<!-- Description -->
+<div class="details">
+  <h2>Product Description</h2>
+  <p id="product-description"></p>
+</div>
 
-    fetch('products.json')
-      .then(res => res.json())
-      .then(products => {
-        const product = products.find(p => p.id.toString() === productId);
-        if (product) {
-          currentProduct = product;
-          document.getElementById("product-name").textContent = product.name;
-          document.getElementById("product-image").src = product.image;
-          document.getElementById("product-price").textContent = "$" + (product.price / 100).toFixed(2);
-          document.getElementById("product-description").textContent = product.description;
-        }
-      });
+<script>
+const urlParams = new URLSearchParams(window.location.search);
+const productId = urlParams.get("id");
+let currentProduct = null;
 
-    function addToCart() {
-      if (!currentProduct) return;
-      let cart = JSON.parse(localStorage.getItem("cart")) || [];
-      const existing = cart.find(item => item.id.toString() === currentProduct.id.toString());
-      if (existing) existing.quantity++;
-      else cart.push({ id: currentProduct.id.toString(), name: currentProduct.name, price: currentProduct.price, quantity: 1 });
-      localStorage.setItem("cart", JSON.stringify(cart));
-      alert(currentProduct.name + " added to cart!");
-    }
+// Fetch product JSON
+fetch('products.json')
+.then(res => res.json())
+.then(products => {
+  const product = products.find(p => p.id.toString() === productId);
+  if(product){
+    currentProduct = product;
+    document.getElementById("product-image").src = product.image || "https://via.placeholder.com/600x400?text=No+Image";
+    document.getElementById("product-price").textContent = "$" + (product.price/100).toFixed(2);
+    document.getElementById("product-name").textContent = product.name;
+    document.getElementById("product-description").textContent = product.description;
 
-    async function checkoutProduct() {
-      if (!currentProduct) return;
-      alert("Checkout process would start here!");
-    }
-  </script>
+    const heartEl = document.querySelector(".heart");
+    const liked = JSON.parse(localStorage.getItem("likedItems")) || [];
+    if(liked.includes(product.id.toString())) heartEl.textContent = "♥";
+  }
+});
+
+// Cart
+function addToCart() {
+  if(!currentProduct) return;
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(item => item.id.toString()===currentProduct.id.toString());
+  if(existing) existing.quantity++;
+  else cart.push({ id: currentProduct.id.toString(), name: currentProduct.name, price: currentProduct.price, quantity: 1 });
+  localStorage.setItem("cart", JSON.stringify(cart));
+  alert(currentProduct.name + " added to cart!");
+}
+
+// Like button
+function toggleLike(productId, el) {
+  productId = productId.toString();
+  let liked = JSON.parse(localStorage.getItem("likedItems")) || [];
+  if(liked.includes(productId)) { liked = liked.filter(id=>id!==productId); el.textContent="♡"; }
+  else { liked.push(productId); el.textContent="♥"; }
+  localStorage.setItem("likedItems", JSON.stringify(liked));
+}
+
+// Checkout
+const paymentSelect = document.getElementById("payment-method");
+const checkoutIcon = document.getElementById("checkout-icon");
+paymentSelect.addEventListener("change", () => {
+  const val = paymentSelect.value;
+  if(val==="paypal") checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888841.png";
+  else if(val==="stripe-card") checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888879.png";
+  else if(val==="stripe-wallet") checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888863.png";
+  else checkoutIcon.src="https://cdn-icons-png.flaticon.com/512/888/888879.png";
+});
+
+async function checkoutProduct() {
+  if(!currentProduct) return;
+  const method = paymentSelect.value;
+  if(!method){ alert("Please select a payment method!"); return; }
+
+  if(method==="paypal"){
+    window.location.href = `https://www.paypal.com/checkoutnow?amount=${(currentProduct.price/100).toFixed(2)}`;
+  } else {
+    const response = await fetch("http://localhost:4000/create-checkout-session", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ items:[{ id: currentProduct.id, name: currentProduct.name, price: currentProduct.price, quantity:1 }], paymentType: method==="stripe-card"?"card":"wallet" })
+    });
+    const data = await response.json();
+    window.location = data.url;
+  }
+}
+</script>
 
 </body>
 </html>
