--- a/product.html
+++ b/product.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>Product Details</title>
 <style>
+  /* Prevent horizontal scroll */
+  * { box-sizing: border-box; }
+  html, body { overflow-x: hidden; }
+
   /* 🌐 Global Styles */
   body {
     font-family: Arial, sans-serif;
@@ -17,7 +21,7 @@
   .header {
     position: fixed;
     top: 0; left: 0;
-    width: 80%;
+    width: 100%;
     z-index: 1000;
     background: #fff;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
